# gamescope-webrtc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  current_idea.txt  evdev.json
.github/workflows/: build.yaml
durable-object-starter_REMOVE/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
durable-object-starter_REMOVE/functions/: durable-object.ts
src/: CMakeLists.txt  example.cpp  example_lib.rs  example_lib_dynamic.rs  example_lib_static.rs  exports.map  game_launch.cpp  game_launch.hpp  helper.cpp  lib.cpp  lib.h  main.cpp  main.hpp  main.html  main2.html  main3.html  main_c.html  recording.cpp  recording.hpp  uinput_helper.cpp  uinput_helper.hpp  webrtc.cpp  webrtc.hpp
src/cloudflare/durable-object-starter/: wrangler.jsonc
src/cloudflare/durable-object-starter/src/functions/: websocket.ts
src/cloudflare/webrtc-streaming-do-worker/: package-lock.json  package.json  run.sh  worker-configuration.d.ts  wrangler.jsonc
src/cloudflare/webrtc-streaming-do-worker/src/: index.ts
src/cloudflare/webrtc-streaming-pages/: package-lock.json  package.json  run.sh  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
src/cloudflare/webrtc-streaming-pages/functions/: websocket.ts
src/cloudflare/webrtc-streaming-pages/public/: index.css  index.html  keyboard_minimized.js  main.js  streaming.html
src/web/: index.css  keyboard.js  main.js  main_c.html
testing/: a.out  overlayfs.c
